[package]
edition = "2021"
name = "tvm_block_json"
rust-version = "1.75.0"
version = "0.8.0"

[dependencies]
anyhow = "1.0.79"
base64 = "0.21.7"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.20"
metrics = "0.22"
num = "0.4.1"
num-traits = "0.2.17"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = { features = ["preserve_order"], version = "1.0.113" }
thiserror = "1.0.56"
tvm_api = { git = "https://github.com/tvmlabs/tvm-tl", package = "tvm_api", tag = "0.4.0" }
tvm_block = { git = "https://github.com/tvmlabs/tvm-block", tag = "2.0.0" }
tvm_types = { git = "https://github.com/tvmlabs/tvm-types", tag = "3.0.1" }

[dev-dependencies]
pretty_assertions = "1.4.0"
